--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,14 @@ Source: pt-touchscreen
 Section: utils
 Priority: optional
 Maintainer: pi-top <deb-maintainers@pi-top.com>
-Build-Depends: debhelper (>= 7)
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 10)
+Standards-Version: 3.9.8
 Homepage: https://pi-top.com/
 
 Package: pt-touchscreen
 Architecture: armhf
-Depends: touchegg
+Depends: ${misc:Depends},
+ touchegg
 Description: pi-top Touchscreen Support
- APT package for configuring anything relating to
+ Dependency package for configuring anything relating to
  touchscreen support on pi-topOS.
