--- a/debian/pt-hotplug-display.service
+++ b/debian/pt-hotplug-display.service
@@ -3,7 +3,7 @@ Description=pi-top [4] touchscreen hotplug service
 Documentation=https://knowledgebase.pi-top.com/knowledge
 
 [Service]
-Type=oneshot
+Type=simple
 ExecStart=/usr/lib/pt-os-mods/hotplug_display.sh
 
 [Install]
