--- a/debian/control
+++ b/debian/control
@@ -10,10 +10,6 @@ Package: pt-touchscreen
 Architecture: all
 Depends:
  ${misc:Depends},
-# 'cut', 'tail' commands
- coreutils (>= 8.30-3),
-# 'grep' command
- grep (>= 3.3-1),
 # Used when waiting for breadcrumb from udev rule
  inotify-tools,
 # Possibly used for notifications
@@ -25,12 +21,8 @@ Depends:
 # pt-ui-mods provides a notification-wrapped call to touchegg
 Suggests: pt-ui-mods,
 # Notifications that can be interacted with
- pt-notifications
+ pt-os-notifications
 # Touchscreen udev rule was provided by pt-os-mods in versions < 8.0
-Replaces:
- pt-os-mods (<< 8),
-Breaks:
- pt-os-mods (<< 8),
 Description: pi-top Touchscreen Support
  Dependency package for configuring anything relating to
  touchscreen support on pi-topOS.
