Rename release artifacts

--- a/.github/workflows/deb-release.yml
+++ b/.github/workflows/deb-release.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: "dsc"
+          name: ${{ matrix.distro }}-${{ matrix.architecture }}
           path: "./artifacts"
 
       - name: Upload .dsc to PackageCloud
